--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -33,7 +34,95 @@
         </ul>
       </address>
     </header>
-    <main id="Studio"></main>
+    <main id="">
+      <ul>
+        <li>All</li>
+        <li>Web Site</li>
+        <li>App</li>
+        <li>Design</li>
+        <li>Marketing</li>
+      </ul>
+      <img />
+      <table>
+        <tbody>
+          <!--1st TABLE ROW -->
+          <tr class="first row">
+            <td>
+              <img src="./images/img_row1_cell1.jpg" alt="screenshots of app" />
+              <h2>Banking App Interface Concept</h2>
+              <p>App</p>
+            </td>
+            <td>
+              <img
+                src="./images/img_row1_cell2.jpg"
+                alt="phone that processing cashless payment"
+              />
+              <h2>Cashless Payment</h2>
+              <p>Marketing</p>
+            </td>
+            <td>
+              <img src="./images/img_row1_cell3.jpg" alt="laptop and a phone" />
+              <h2>Meditation App</h2>
+              <p>App</p>
+            </td>
+          </tr>
+          <!--2nd TABLE ROW -->
+          <tr>
+            <td>
+              <img
+                src="./images/img_row2_cell1.jpg"
+                alt="phone attached to dashboard in a car"
+              />
+              <h2>Taxi Service</h2>
+              <p>Marketing</p>
+            </td>
+            <td>
+              <img
+                src="./images/img_row2_cell2.jpg"
+                alt="phone screen and collage of four screens of the same phone"
+              />
+              <h2>Screen Illustrations</h2>
+              <p>Design</p>
+            </td>
+            <td>
+              <img
+                src="./images/img_row2_cell3.jpg"
+                alt="lady holding a phone"
+              />
+              <h2>Online Courses</h2>
+              <p>Marketing</p>
+            </td>
+          </tr>
+          <!--3rd TABLE ROW-->
+          <tr>
+            <td>
+              <img
+                src="./images/img_row3_cell1.jpg"
+                alt="many pictures with phrase make everything feel easier"
+              />
+              <h2>Instagram Stories Concept</h2>
+              <p>Design</p>
+            </td>
+            <td>
+              <img
+                src="./images/img_row3_cell2.jpg"
+                alt="lady holding a bag with veggies"
+              />
+              <h2>Organic Food</h2>
+              <p>Web Site</p>
+            </td>
+            <td>
+              <img
+                src="./images/img_row3_cell3.jpg"
+                alt="frosted milk being poured into a cup with capuccino"
+              />
+              <h2>Fresh Coffee</h2>
+              <p>Web Site</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </main>
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
